examples/should_fail/proc-undefined.anvil
proc main() =
    spawn child ()
    loop {
        cycle 1
    }